--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name _;
+    absolute_redirect off;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -15,8 +16,8 @@ server {
     # ===============================
     # AUTH SERVICE (path rewrite)
     # ===============================
-    location /auth/ {
-        proxy_pass http://auth:8000/;  # trailing slash is CRITICAL
+    location /api/auth/ {
+        proxy_pass http://auth:8000/api/auth/;  # trailing slash is CRITICAL
         proxy_http_version 1.1;
 
         proxy_set_header Host $host;
@@ -31,8 +32,8 @@ server {
     # ===============================
     # INVENTORY SERVICE
     # ===============================
-    location /api/ {
-        proxy_pass http://inventory:8001/;
+    location /api/inventory/ {
+        proxy_pass http://inventory:8001/api/inventory/;
         proxy_http_version 1.1;
 
         proxy_set_header Host $host;
@@ -43,8 +44,8 @@ server {
     # ===============================
     # ORDER SERVICE
     # ===============================
-    location /orders/ {
-        proxy_pass http://orders:8002/orders/;
+    location /api/orders/ {
+        proxy_pass http://orders:8002/api/orders/;
         proxy_http_version 1.1;
 
         proxy_set_header Host $host;
@@ -54,8 +55,8 @@ server {
     # ===============================
     # PAYMENT SERVICE
     # ===============================
-    location /pay/ {
-        proxy_pass http://payment:8003/;
+    location /api/payments/ {
+        proxy_pass http://payment:8003/api/payments/;
         proxy_http_version 1.1;
 
         proxy_set_header Host $host;
