--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,54 +12,55 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
     }
-
-    # ===============================
-    # AUTH SERVICE (path rewrite)
-    # ===============================
-    location /api/auth/ {
-        proxy_pass http://auth:8000/api/auth/;  # trailing slash is CRITICAL
-        proxy_http_version 1.1;
-
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        # Do NOT forward JWT to login/register
-        proxy_set_header Authorization "";
-    }
-
-    # ===============================
-    # INVENTORY SERVICE
-    # ===============================
-    location /api/inventory/ {
-        proxy_pass http://inventory:8001/api/inventory/;
-        proxy_http_version 1.1;
-
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Authorization $http_authorization;
-    }
-
-    # ===============================
-    # ORDER SERVICE
-    # ===============================
-    location /api/orders/ {
-        proxy_pass http://orders:8002/api/orders/;
-        proxy_http_version 1.1;
-
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Authorization $http_authorization;
-    }
-    # ===============================
-    # PAYMENT SERVICE
-    # ===============================
-    location /api/payments/ {
-        proxy_pass http://payment:8003/api/payments/;
-        proxy_http_version 1.1;
-
-        proxy_set_header Host $host;
-        proxy_set_header Authorization $http_authorization;
-    }
 }
+
+#     # ===============================
+#     # AUTH SERVICE (path rewrite)
+#     # ===============================
+#     location /api/auth/ {
+#         proxy_pass http://auth:8000/api/auth/;  # trailing slash is CRITICAL
+#         proxy_http_version 1.1;
+
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+
+#         # Do NOT forward JWT to login/register
+#         proxy_set_header Authorization "";
+#     }
+
+#     # ===============================
+#     # INVENTORY SERVICE
+#     # ===============================
+#     location /api/inventory/ {
+#         proxy_pass http://inventory:8001/api/inventory/;
+#         proxy_http_version 1.1;
+
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header Authorization $http_authorization;
+#     }
+
+#     # ===============================
+#     # ORDER SERVICE
+#     # ===============================
+#     location /api/orders/ {
+#         proxy_pass http://orders:8002/api/orders/;
+#         proxy_http_version 1.1;
+
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header Authorization $http_authorization;
+#     }
+#     # ===============================
+#     # PAYMENT SERVICE
+#     # ===============================
+#     location /api/payments/ {
+#         proxy_pass http://payment:8003/api/payments/;
+#         proxy_http_version 1.1;
+
+#         proxy_set_header Host $host;
+#         proxy_set_header Authorization $http_authorization;
+#     }
+# }
