update for miroservice artitecture

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,125 +1,10 @@
 version: "3.9"
 
-services:
-  postgres:
-    image: postgres:15
-    container_name: microservice-db-postgres
-    environment:
-      POSTGRES_DB: store
-      POSTGRES_USER: storeuser
-      POSTGRES_PASSWORD: storepass
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    ports:
-      - "8005:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U storeuser"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    networks:
-      - microservices-network
-
-
-  auth:
-    build: ./auth-service
-    container_name: auth-microservice
-    env_file: .env
-    depends_on:
-      postgres:
-        condition: service_healthy
-    ports:
-      - "8000:8000"
-    networks:
-      - microservices-network  
-      - monitoring_monitoring-network 
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/api/auth/health || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5 
-
-  inventory:
-    build: ./inventory-microservice
-    container_name: inventory-microservice
-    env_file: .env
-    depends_on:
-      postgres:
-        condition: service_healthy
-    ports:
-      - "8001:8001"
-    networks:
-      - microservices-network
-      - monitoring_monitoring-network
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8001/api/inventory/health || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  orders:
-    build: ./order-microservice
-    container_name: orders-microservice
-    env_file: .env
-    depends_on:
-      postgres:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8002/api/orders/health || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5  
-    ports:
-      - "8002:8002"
-    networks:
-      - microservices-network
-      - monitoring_monitoring-network
-
-
-  payment:
-    build: ./payment-microservice
-    container_name: payment-microservice
-    env_file: .env
-    ports:
-      - "8003:8003"
-    depends_on:
-      postgres:
-        condition: service_healthy
-    networks:
-      - microservices-network
-      - monitoring_monitoring-network
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8003/api/payments/health || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  frontend:
-    build: ./frontend
-    container_name: frontend-microservice
-    ports:
-      - "8004:80"
-    env_file: .env
-    depends_on:
-      - auth
-      - inventory
-      - orders
-      - payment
-    networks:
-      - microservices-network
-      - monitoring_monitoring-network
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5  
+networks:
+  app-net:
 
 volumes:
-  pgdata:
-
-networks:
-  microservices-network:  
-    driver: bridge
-  monitoring_monitoring-network:
-    driver: bridge
-    external: true
+  auth-db:
+  inventory-db:
+  orders-db:
+  payments-db:
