--- a/payment-microservice/requirements.txt
+++ b/payment-microservice/requirements.txt
@@ -1,3 +1,9 @@
 fastapi==0.109.1
 uvicorn[standard]
+sqlalchemy==2.0.30
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+python-jose==3.3.0
+requests==2.31.0
+pydantic==2.7.1
 prometheus-client==0.19.0
