--- a/docker-compose-frontend.yml
+++ b/docker-compose-frontend.yml
@@ -8,6 +8,11 @@ services:
     restart: unless-stopped
     ports:
       - "8004:80"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     depends_on:
       - auth
       - inventory
