--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -21,3 +21,8 @@ scrape_configs:
     metrics_path: /api/payments/metrics
     static_configs:
       - targets: ["payment:8003"]
+  - job_name: "gateway"
+    metrics_path: /metrics
+    static_configs:
+      - targets: ["api-gateway:8080"]
+
