--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,9 +1,20 @@
 FROM python:3.11-slim
 
-WORKDIR /app
-COPY requirements.txt .
-RUN pip install -r requirements.txt
+# ---------- install nginx ----------
+RUN apt-get update && apt-get install -y nginx && rm -rf /var/lib/apt/lists/*
 
+WORKDIR /app
+
+# ---------- python deps ----------
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# ---------- copy app ----------
 COPY . .
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+# ---------- nginx config ----------
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# ---------- start both ----------
+CMD ["sh", "-c", "nginx && uvicorn main:app --host 0.0.0.0 --port 8080"]
+EXPOSE 8080
