--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,18 +1,16 @@
 server {
     listen 80;
     server_name _;
-    absolute_redirect off;
 
     root /usr/share/nginx/html;
     index index.html;
 
-    # ===============================
     # React SPA routing
-    # ===============================
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
 }
+
 
 #     # ===============================
 #     # AUTH SERVICE (path rewrite)
